Fix post card spacing

--- a/src/components/PostCard.module.scss
+++ b/src/components/PostCard.module.scss
@@ -5,6 +5,7 @@
   transition: $transitions-boom-transition;
   overflow: hidden;
   min-height: 16rem;
+  display: flex;
   &:hover {
     box-shadow: rgba(46, 41, 51, 0.8) 0px 4px 12px;
     transform: scale(1.04);
@@ -19,7 +20,6 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
-  height: 100%;
   &:hover {
     color: #fff;
   }
